--- a/app/src/main/res/layout/picture_view.xml
+++ b/app/src/main/res/layout/picture_view.xml
@@ -19,7 +19,7 @@
        android:id="@+id/pictureLoad"
        />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:layout_width="match_parent"
             android:layout_below="@+id/pictureLoad"
             android:layout_height="@dimen/_40sdp"
